[package]
name = "esp_psram"
version = "0.1.0"
authors = ["tlostroh"]
edition = "2018"
description = "Platform-agnostic Rust driver for the ESP-PSRAM64 serial pseudo SRAM devices"
keywords = ["nostd", "embedded-hal" , "ram" , "driver"]

[dependencies]
embedded-hal = {path = "../embedded-hal"}
nb = "1.0"

[profile.release]
lto = true